2006-03-23  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* slime.el (slime-qualify-cl-symbol-name): Strip leading colon
	from package names for qualifying symbols.
	(slime-call-defun): New command.
	(slime-keys): Bind it to C-c C-y.
	(slime-easy-menu): Show it in the menu.

	* slime.el (slime-autodoc-use-multiline-p): New defcustom.
	(slime-autodoc-message): Use it here.  Fix bug that autodoc
	messages exceeding one line could not be overwritten by later
	autodoc messages.
	(slime-autodoc-pre-command-refresh-echo-area): Use message
	rather than slime-background-message.
	
	* swank.lisp (casify): Removed.
	(casify-char, tokenize-symbol-thoroughly): New functions.
	(parse-symbol): Use tokenize-symbol-thoroughly, so as to handle
	|escaped symbols|.  This fixes arglist display for operators with
	strange symbol names.

2006-03-23  Douglas Crosher <dcrosher@common-lisp.net>

	* swank-backend (accept-connection): add a 'timeout argument to
	this function.

	* swank-backend (set-stream-timeout): new implementation specific
	function.  Used to set the timeout for stream operations, which
	can help make the network connection establishment more robust.

	* swank (setup-server): ignore errors from the function 'serve to
	allow another connection to be made.

	* swank (serve-connection): ensure the listener socket is closed
	when 'dont-close is false, even if the connection attempt fails.

	* swank (accept-authenticated-connection): ensure the new
	connection is closed if the connection establishment fails.  Set a
	short stream timeout to prevent denial of survice.

	* swank (open-dedicated-output-stream): ensure the listener socket
	is closed, even if unable to open the dedicated stream.  Implement
	a timeout while waiting for a connection for the dedicate stream
	to prevent denial of service.

	* swank (create-connection): ensure the new connection is closed
	if not successful.

2006-03-22  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>
